<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item android:id="@+id/menu_all" android:title="@string/sall"/>
	<item android:id="@+id/menu_none" android:title="@string/snone"/>
	<item android:id="@+id/menu_settings" android:title="@string/menu_settings" android:showAsAction="always" android:icon="@android:drawable/ic_menu_preferences"/>
	<item android:id="@+id/menu_refresh" android:title="@string/refresh" android:showAsAction="always" android:icon="@android:drawable/ic_popup_sync"/>
	<item android:id="@+id/menu_sort" android:title="@string/sort" android:showAsAction="ifRoom">
		<menu>
			<item android:id="@+id/sortby_date" android:title="@string/date" android:icon="@android:drawable/ic_menu_month"/>
			<item android:id="@+id/sortby_name" android:title="@string/name" android:icon="@android:drawable/ic_menu_sort_alphabetically"/>
			<item android:id="@+id/sortby_size" android:title="@string/size" android:icon="@android:drawable/ic_menu_sort_by_size"/>
		</menu>
	</item>
	<!-- <item android:id="@+id/menu_optimize" android:title="optimize" android:showAsAction="always|withText" android:icon="@android:drawable/ic_menu_save"/> -->

</menu>
